--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "react-dom": "18.2.0",
     "react-feather": "^2.0.10",
     "react-redux": "^8.0.5",
-    "typescript": "5.0.2"
+    "typescript": "5.0.2",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
+    "@types/uuid": "^9.0.1",
     "autoprefixer": "^10.4.14",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-tailwindcss": "^3.10.1",
